--- a/AssessmentStyle.css
+++ b/AssessmentStyle.css
@@ -1,22 +1,27 @@
+body{
+  margin: 0px;
+}
 
 .item1{
   grid-area: header;
-  margin-left: 10px;
+  background-color: #FA5D6B;
+  padding:  10px;
 }
 
 .item2{
   grid-area: mbody;
-  margin-left: 10px;
+  padding:  10px;
 }
 
 .item3{
   grid-area: sidebar;
-  margin-left: 20px;
-
+  background-color: #EDECEA;
+  padding:  10px;
 }
 
 .item4{
   grid-area: footer;
+  background-color: #364356;
   text-align: center;
 }
 
@@ -37,39 +42,72 @@
 
 .item5{
   grid-area: picture;
+
 }
 
 .item6{
   grid-area: name;
+
+
 }
 
 .grid-container-head{
   display: grid;
   grid-template-columns: 100px auto;
   grid-template-rows: auto;
+  align-items: center;
+  column-gap: 20px;
   grid-template-areas:
     "picture name";
 }
 /*Information*/
 .work{
-  border: 1px solid #85E9E3;
+
 }
 
 .education{
-  border:red;
+
 }
 
 .extra{
-  border:red;
-}
 
-/*Font style*/
-.left{
-  text-align: right;
 }
 
 .picture{
   grid-area: picture;
   height: 100px;
+  text-align: center;
+}
+
+/*Font style*/
+
+h1{
+  margin: 0px;
+  color: #364356;
+}
+
+h2{
+  margin: 0px;
+  color: #364356;
+  font-style: italic;
+
+}
+
+h3{
+  margin-bottom: 0px;
+}
+
+h4{
+  margin-top: 0px;
+}
+
+.texth2{
+  color: #BD9F63;
+  border-bottom: 3px solid #FA5D6B;
+}
+
+.texth3{
+  color: #BD9F63;
+  margin-bottom: 20px;
   text-align: center;
 }
